# Booking-Sentiment

./: .gitignore  Dockerfile  LAB_INSTRUCTION.ipynb  MLPipeline.ipynb  README.md  data_analyze_instr.md  instr.ipynb  pyproject.toml
MLOps_course_AGH_lab_4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MLOps_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
booking_sentiment/: __init__.py  behavior.py  behavioral.py  check_duplicates.py  cli.py  cli_functions.py  config.py  data_clean.py  data_ingest.py  evaluate.py  explain.py  quality.py  runtime.py  splits.py  train_hf.py
booking_sentiment/tools/: __init__.py  behavioral.py  data_clean.py  data_ingest.py  evaluate.py  explain.py  fine_tune.py  inference.py  quality.py  splits.py  train.py
configs/: quick.json
mlruns/0/: meta.yaml
mlruns/0/14a25fa63c7845d1b3e4b84d9728df17/: meta.yaml
mlruns/0/215558781df24239b0943c3960e76707/: meta.yaml
mlruns/0/2ff77218b907430caf37b1d9dfa868fb/: meta.yaml
mlruns/0/32a77446f6db402b85b7f879d296fb5d/: meta.yaml
mlruns/0/32e85e89b6e640a1be49f3042d12eaab/: meta.yaml
mlruns/0/46526f39354041048a455d6bdc49245f/: meta.yaml
mlruns/0/484accead6ed42fc88d63a0a10aaae1b/: meta.yaml
mlruns/0/50a7613cd81c47169d1de9452eed218a/: meta.yaml
mlruns/0/58a24a94ff82495abe72fd9021ebfc65/: meta.yaml
mlruns/0/7c59e93a25bc491c8c08f3ffb37de5e0/: meta.yaml
mlruns/0/864c4a061c754536a9a1ff37d6f5507e/: meta.yaml
mlruns/0/8756d4e7f6424018b14dc9a62f9d8082/: meta.yaml
mlruns/0/8b9f3ca2038c4c4faff1f0a2d4fb20ad/: meta.yaml
mlruns/0/97c88bc489fe472d936d15402efacc4a/: meta.yaml
mlruns/0/995cc95f5ef14a6481f920caf7af274a/: meta.yaml
mlruns/0/9b77f68c728145038d43b0a147968580/: meta.yaml
mlruns/0/a224ae6eaeae482394fb665c5088366b/: meta.yaml
mlruns/0/a4329ef0af7e42fcb9a679575ce41427/: meta.yaml
(+328 files in other folders)
