[project]
name = "MLOps_course_AGH_lab_4"
version = "1.0.0"
description = ""
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "captum",
    "cleanlab",
    "datasets",
    "giskard",
    "jupyter",
    "matplotlib",
    "pydantic>=2",
    "pandas",
    "ruff",
    "scikit-learn",
    "sentence-transformers",
    "typer>=0.9",
    "transformers[torch]"
]

[project.scripts]
booking-sentiment = "booking_sentiment.cli:app"

[tool.uv]
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true
